--- a/app/public/survery.html
+++ b/app/public/survery.html
@@ -25,7 +25,6 @@
               ...
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div>
@@ -44,11 +43,15 @@
         <div class="col-12" style="border-top: 1px solid grey" >
             <br>
             <h1>About you!</h1>
+            
+            <!-- Name -->
             <p>Name (Required)</p>
-            <input class="form-control" type="text" placeholder="Name!">
+            <input class="form-control" type="text" id="name" placeholder="Name!">
             <br>
+
+            <!-- Photo -->
             <p>Link to Photo Image (required)</p>
-            <input class="form-control" type="text" placeholder="That babymaking face here!">
+            <input class="form-control" type="text" id="photo" placeholder="That babymaking face here!">
             <br>
             <!--End of about you-->
         </div>
