--- a/app/public/survery.html
+++ b/app/public/survery.html
@@ -16,16 +16,18 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">This is the Babymaker for you baby!!</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+                <h5 class="modal-title" id="exampleModalLongTitle">This is the Babymaker for you baby!!</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
-              ...
+                <div id="match-name" ></div>
+                <div id="match-photo" ></div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-primary" style="float: left;" >Save changes</button>
             </div>
           </div>
         </div>
@@ -63,7 +65,7 @@
             <h3>Question 1</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">You love meeting new people</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question1">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -76,7 +78,7 @@
             <h3>Question 2</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">You love having a WILD time!</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question2">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -89,7 +91,7 @@
             <h3>Question 3</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">You need Excitement in your life!</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question3">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -102,7 +104,7 @@
             <h3>Question 4</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">Watching TV is exciting for you!</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question4">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -115,7 +117,7 @@
             <h3>Question 5</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">You believe in love?</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question5">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -128,7 +130,7 @@
             <h3>Question 6</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">You are looking for something serious!</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question6">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -141,7 +143,7 @@
             <h3>Question 7</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">You have the baby fever BAD!</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question7">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -153,7 +155,7 @@
             <h3>Question 8</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">You have way too many pets to compensate for the baby fever</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question8">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -166,7 +168,7 @@
             <h3>Question 9</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">You love meeting new people</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question9">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -179,7 +181,7 @@
             <h3>Question 10</h3>
                 <div class="form-group">
                 <label for="exampleFormControlSelect1">You are just using this to find your next fling!</label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="question10">
                     <option>1 AGREE!</option>
                     <option>2</option>
                     <option>3</option>
@@ -194,7 +196,7 @@
         </div>
         <!--End of container-->
     </div>
-    <a href="http://">API Friends List</a>
+    <a href="/data/friends">API Friends List</a>
     |
      <a href="https://github.com/PierceMor/datingApp">Github Repo</a>
      <!-- End of container -->
@@ -203,6 +205,46 @@
      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
      <script src="../data/friends.js"></script>
+
+     <script type="text/Javascript">
+     
+    $('#add-btn').on("click", function(event){
+        event.preventDefault();
+
+
+        var newUser = {
+            name: $("#name").val().trim(),
+            photo: $("#photo").val().trim(),
+            question: [
+                $("#question1").val(),
+                $("#question2").val(),
+                $("#question3").val(),
+                $("#question4").val(),
+                $("#question5").val(),
+                $("#question6").val(),
+                $("#question7").val(),
+                $("#question8").val(),
+                $("#question9").val(),
+                $("#question10").val()
+            ]
+        };
+
+        $.post('/data/friends', newUser, function(data){
+
+            // grab best match from AJAX post 
+            $("#match-name").text(data.name);
+            $('$match-photo').attr("src",data.photo);
+
+
+
+        });
+        console.log(err);
+    })
+
+     </script>
+     
 </body>
 </html>
