--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,7 +6,7 @@
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
 </header>
 <body>
@@ -18,7 +18,7 @@
             <hr class="my-4" style="font-weight: bold">
             <p style="font-weight: bold">Then find your next babymaking Partner!</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="./survery.html" role="button" style="font-weight: bold" >Go to Survey</a>
+                <a class="btn btn-primary btn-lg" href="survery" role="button" style="font-weight: bold" >Go to Survey</a>
             </p>
             <!--End of Jumbotron-->
         </div>
