--- a/app/public/survery.html
+++ b/app/public/survery.html
@@ -27,7 +27,6 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary">Save changes</button>
-              <button type="button" class="btn btn-primary" style="float: left;" >Save changes</button>
             </div>
           </div>
         </div>
@@ -236,12 +235,12 @@
 
             // grab best match from AJAX post 
             $("#match-name").text(data.name);
-            $('$match-photo').attr("src",data.photo);
+            $('#match-photo').attr("src",data.photo);
 
 
 
         });
-        console.log(err);
+        
     })
 
      </script>
