--- a/app/public/home.html
+++ b/app/public/home.html
@@ -22,7 +22,7 @@
             </p>
             <!--End of Jumbotron-->
         </div>
-        <a href="http://">API Friends List</a>
+        <a href="api/Friends">API Friends List</a>
        |
         <a href="https://github.com/PierceMor/datingApp">Github Repo</a>
         <!-- End of container -->
