--- a/app/public/survery.html
+++ b/app/public/survery.html
@@ -195,7 +195,7 @@
         </div>
         <!--End of container-->
     </div>
-    <a href="/data/friends">API Friends List</a>
+    <a href="/api/friends">API Friends List</a>
     |
      <a href="https://github.com/PierceMor/datingApp">Github Repo</a>
      <!-- End of container -->
